--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Anomaly Detection System
+## Anomaly Detection System
 
 ## Overview
 
@@ -21,6 +21,7 @@ Before running the project, ensure you have the following installed:
 - **requirements.txt**: List of Python packages required for the project.
 - **README** 
 - **Dataset.xlsx/**: The dataset used in this project.
+
 
 
 
